--- a/BallClub/BallClub/Storyboards/Game.storyboard
+++ b/BallClub/BallClub/Storyboards/Game.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="pbT-sM-LxJ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11760" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="pbT-sM-LxJ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11755"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
@@ -658,7 +658,7 @@
             <objects>
                 <tableViewController id="9FS-0q-87m" customClass="InvitedFriendsViewController" customModule="BallClub" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" allowsSelection="NO" rowHeight="55" sectionHeaderHeight="18" sectionFooterHeight="2" id="vDm-Ey-WT5">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="800"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="900"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="separatorColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -1070,21 +1070,6 @@
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                                                 </textField>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aTy-Cb-PaY">
-                                                    <rect key="frame" x="530" y="93" width="62" height="30"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="62" id="6sK-Hp-9P7"/>
-                                                        <constraint firstAttribute="height" constant="30" id="xxt-Gm-cU7"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                                    <state key="normal" title="See all &gt;">
-                                                        <color key="titleColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                    </state>
-                                                    <connections>
-                                                        <action selector="seeAllButtonPressed:" destination="xVY-nh-ebn" eventType="touchUpInside" id="qG4-WC-Sdp"/>
-                                                        <segue destination="9FS-0q-87m" kind="show" id="w2v-na-vYe"/>
-                                                    </connections>
-                                                </button>
                                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2wK-7a-Cko">
                                                     <rect key="frame" x="537" y="136" width="51" height="31"/>
                                                     <constraints>
@@ -1152,17 +1137,13 @@
                                                 <constraint firstItem="9nH-vF-ces" firstAttribute="leading" secondItem="sCr-1g-fAh" secondAttribute="trailing" constant="16" id="AQq-rS-eZi"/>
                                                 <constraint firstItem="sCr-1g-fAh" firstAttribute="centerY" secondItem="kan-mx-E9X" secondAttribute="centerY" id="CW1-S9-4VL"/>
                                                 <constraint firstItem="ENu-SI-8p2" firstAttribute="centerY" secondItem="2wK-7a-Cko" secondAttribute="centerY" id="Evb-lb-qRv"/>
-                                                <constraint firstItem="2wK-7a-Cko" firstAttribute="top" secondItem="aTy-Cb-PaY" secondAttribute="bottom" constant="13" id="H6k-Hf-H2B"/>
                                                 <constraint firstItem="KPq-x1-W2U" firstAttribute="top" secondItem="sCr-1g-fAh" secondAttribute="bottom" constant="10" id="NY8-zI-X9Q"/>
                                                 <constraint firstItem="sCr-1g-fAh" firstAttribute="leading" secondItem="f46-Hf-hzm" secondAttribute="leadingMargin" constant="8" id="NrJ-br-Zr4"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="2wK-7a-Cko" secondAttribute="trailing" constant="6" id="Q3d-Z1-er5"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="9nH-vF-ces" secondAttribute="trailing" id="WLd-Gs-C6r"/>
                                                 <constraint firstItem="9nH-vF-ces" firstAttribute="centerY" secondItem="sCr-1g-fAh" secondAttribute="centerY" id="XMM-Jz-iA7"/>
                                                 <constraint firstItem="sCr-1g-fAh" firstAttribute="top" secondItem="f46-Hf-hzm" secondAttribute="topMargin" constant="1" id="XNP-hS-bRf"/>
-                                                <constraint firstItem="aTy-Cb-PaY" firstAttribute="centerX" secondItem="2wK-7a-Cko" secondAttribute="centerX" id="YZm-YI-wBk"/>
-                                                <constraint firstItem="aTy-Cb-PaY" firstAttribute="top" secondItem="9nH-vF-ces" secondAttribute="bottom" constant="56" id="bwb-DU-dhw"/>
-                                                <constraint firstItem="aTy-Cb-PaY" firstAttribute="trailing" secondItem="kan-mx-E9X" secondAttribute="trailing" id="e0Z-kk-qL1"/>
-                                                <constraint firstItem="aTy-Cb-PaY" firstAttribute="top" secondItem="kan-mx-E9X" secondAttribute="bottom" constant="56" id="j5u-md-hUt"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="2wK-7a-Cko" secondAttribute="bottom" constant="4" id="psS-Tf-D32"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="KPq-x1-W2U" secondAttribute="trailing" constant="6" id="q4w-XL-zwu"/>
                                                 <constraint firstItem="sCr-1g-fAh" firstAttribute="leading" secondItem="KPq-x1-W2U" secondAttribute="leading" id="zyF-Z4-rfO"/>
                                             </constraints>
@@ -2030,7 +2011,4 @@
         <image name="player_curry" width="200" height="304"/>
         <image name="player_durant" width="200" height="125"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="w2v-na-vYe"/>
-    </inferredMetricsTieBreakers>
 </document>
