--- a/BallClub/BallClub/Custom Views/Games/FeedsCustomCell.xib
+++ b/BallClub/BallClub/Custom Views/Games/FeedsCustomCell.xib
@@ -122,7 +122,7 @@
                             <constraint firstAttribute="height" constant="15" id="s7X-SG-Szm"/>
                         </constraints>
                     </imageView>
-                    <imageView userInteractionEnabled="NO" alpha="0.69999998807907104" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" image="ic_peso" translatesAutoresizingMaskIntoConstraints="NO" id="U0d-1E-Xnv">
+                    <imageView userInteractionEnabled="NO" alpha="0.69999998807907104" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" image="ic_peso_black" translatesAutoresizingMaskIntoConstraints="NO" id="U0d-1E-Xnv">
                         <rect key="frame" x="273.5" y="85" width="15" height="15"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="15" id="Fjc-ut-ocu"/>
@@ -203,7 +203,7 @@
     </objects>
     <resources>
         <image name="ic_map_filled" width="100" height="100"/>
-        <image name="ic_peso" width="512" height="512"/>
+        <image name="ic_peso_black" width="512" height="512"/>
         <image name="ic_schedule" width="512" height="512"/>
         <image name="ic_user_filled" width="100" height="100"/>
     </resources>
