--- a/BallClub/BallClub/Custom Views/Games/FeedsCustomCell.xib
+++ b/BallClub/BallClub/Custom Views/Games/FeedsCustomCell.xib
@@ -12,11 +12,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FeedsCustomCell" rowHeight="150" id="KGk-i7-Jjw" customClass="FeedsCustomCell" customModule="BallClub" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="FeedsCustomCell" rowHeight="179" id="KGk-i7-Jjw" customClass="FeedsCustomCell" customModule="BallClub" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="179"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="149"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="179"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SAT 4/21" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WzO-lh-Kmn">
@@ -29,10 +29,10 @@
                         <color key="textColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                         <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
+                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
                                 <integer key="value" value="1"/>
                             </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                 <integer key="value" value="24"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
@@ -106,10 +106,10 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ace Rivera is going" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YKM-yO-hKc">
-                        <rect key="frame" x="91" y="103" width="161" height="23"/>
+                        <rect key="frame" x="91" y="103" width="221" height="23"/>
                         <constraints>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="23" id="g4d-6x-dnj"/>
-                            <constraint firstAttribute="width" constant="161" id="n0Z-4t-U8T"/>
+                            <constraint firstAttribute="width" constant="221" id="n0Z-4t-U8T"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -148,9 +148,78 @@
                         <color key="textColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BWK-mm-eRT">
+                        <rect key="frame" x="0.0" y="129" width="320" height="50"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="us0-6X-ELj">
+                                <rect key="frame" x="72" y="12" width="133" height="30"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="SUGGEST INVITE">
+                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="NO"/>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
+                                        <integer key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="size" keyPath="layer.shadowOffset">
+                                        <size key="value" width="-2" height="2"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.shadowOpacity">
+                                        <real key="value" value="0.5"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.shadowRadius">
+                                        <integer key="value" value="2"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="2"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ur1-GN-Z5q">
+                                <rect key="frame" x="213" y="12" width="99" height="30"/>
+                                <color key="backgroundColor" red="0.90980392160000001" green="0.35294117650000001" blue="0.27450980390000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="99" id="Lj9-JP-qGR"/>
+                                </constraints>
+                                <state key="normal" title="GOING">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="NO"/>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
+                                        <integer key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="size" keyPath="layer.shadowOffset">
+                                        <size key="value" width="-2" height="2"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.shadowOpacity">
+                                        <real key="value" value="0.5"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.shadowRadius">
+                                        <integer key="value" value="2"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="2"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Ur1-GN-Z5q" firstAttribute="top" secondItem="us0-6X-ELj" secondAttribute="top" id="Dh1-dt-8fM"/>
+                            <constraint firstAttribute="trailing" secondItem="Ur1-GN-Z5q" secondAttribute="trailing" constant="8" id="NCz-lS-qkC"/>
+                            <constraint firstItem="us0-6X-ELj" firstAttribute="top" secondItem="BWK-mm-eRT" secondAttribute="top" constant="12" id="T3p-gm-9tc"/>
+                            <constraint firstItem="Ur1-GN-Z5q" firstAttribute="leading" secondItem="us0-6X-ELj" secondAttribute="trailing" constant="8" id="ldc-bB-Frw"/>
+                            <constraint firstAttribute="bottom" secondItem="us0-6X-ELj" secondAttribute="bottom" constant="8" id="lkB-kU-fCu"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="us0-6X-ELj" secondAttribute="bottom" id="zkc-Mw-9eB"/>
+                        </constraints>
+                    </view>
                 </subviews>
+                <color key="backgroundColor" red="0.87843137250000003" green="0.87843137250000003" blue="0.87843137250000003" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
                     <constraint firstItem="5jd-YX-Uyz" firstAttribute="top" secondItem="25b-eT-lad" secondAttribute="bottom" id="4QR-3A-HbF"/>
+                    <constraint firstItem="YKM-yO-hKc" firstAttribute="trailing" secondItem="utu-LY-YxO" secondAttribute="trailing" id="5eZ-vM-vVQ"/>
                     <constraint firstAttribute="trailingMargin" secondItem="25b-eT-lad" secondAttribute="trailing" constant="40" id="5h7-qc-BfB"/>
                     <constraint firstItem="t2A-mi-Y5j" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="21" id="9OH-kD-nCH"/>
                     <constraint firstItem="YKM-yO-hKc" firstAttribute="leading" secondItem="Owa-kH-RWq" secondAttribute="trailing" constant="4" id="BBR-6o-clA"/>
@@ -158,9 +227,12 @@
                     <constraint firstItem="25b-eT-lad" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="8" id="GGc-EL-B8l"/>
                     <constraint firstItem="25b-eT-lad" firstAttribute="leading" secondItem="WzO-lh-Kmn" secondAttribute="trailing" constant="16" id="GVX-es-KPo"/>
                     <constraint firstItem="jrd-4f-Lsw" firstAttribute="leading" secondItem="sKP-XI-dXB" secondAttribute="trailing" constant="4" id="ONo-g3-qqd"/>
+                    <constraint firstItem="us0-6X-ELj" firstAttribute="leading" secondItem="Owa-kH-RWq" secondAttribute="leading" id="PDb-44-9ln"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="jrd-4f-Lsw" secondAttribute="bottom" priority="750" constant="30" id="PEx-43-FUN"/>
                     <constraint firstItem="U0d-1E-Xnv" firstAttribute="leading" secondItem="jrd-4f-Lsw" secondAttribute="trailing" constant="8" id="Q0L-fv-Qqc"/>
                     <constraint firstItem="Ou6-UR-P4t" firstAttribute="leading" secondItem="5jd-YX-Uyz" secondAttribute="leading" id="Q1H-wL-4s7"/>
                     <constraint firstItem="5jd-YX-Uyz" firstAttribute="trailing" secondItem="25b-eT-lad" secondAttribute="trailing" id="QGd-js-Emw"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="BWK-mm-eRT" secondAttribute="trailing" constant="-8" id="SVN-3c-fBz"/>
                     <constraint firstItem="utu-LY-YxO" firstAttribute="leading" secondItem="U0d-1E-Xnv" secondAttribute="trailing" constant="8" id="XNV-T6-MvR"/>
                     <constraint firstItem="U0d-1E-Xnv" firstAttribute="top" secondItem="jrd-4f-Lsw" secondAttribute="top" constant="3" id="ZFb-iM-YLu"/>
                     <constraint firstAttribute="trailingMargin" secondItem="t2A-mi-Y5j" secondAttribute="trailing" id="aRi-4l-Exi"/>
@@ -175,8 +247,10 @@
                     <constraint firstItem="Owa-kH-RWq" firstAttribute="leading" secondItem="sKP-XI-dXB" secondAttribute="leading" id="hKK-69-hTD"/>
                     <constraint firstItem="YKM-yO-hKc" firstAttribute="top" secondItem="jrd-4f-Lsw" secondAttribute="bottom" id="ind-FK-pcW"/>
                     <constraint firstItem="WzO-lh-Kmn" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="8" id="iuc-HX-Uyn"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="BWK-mm-eRT" secondAttribute="bottom" constant="-8" id="oNg-dj-5O0"/>
                     <constraint firstItem="Owa-kH-RWq" firstAttribute="top" secondItem="sKP-XI-dXB" secondAttribute="bottom" constant="6" id="pPg-Sg-Cg8"/>
                     <constraint firstItem="MRH-Re-13y" firstAttribute="leading" secondItem="Ou6-UR-P4t" secondAttribute="trailing" constant="4" id="r90-v8-1Zv"/>
+                    <constraint firstItem="BWK-mm-eRT" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-8" id="yJm-zc-LDp"/>
                     <constraint firstItem="YKM-yO-hKc" firstAttribute="top" secondItem="Owa-kH-RWq" secondAttribute="top" constant="-3" id="yhD-Yx-fkT"/>
                     <constraint firstAttribute="trailingMargin" secondItem="MRH-Re-13y" secondAttribute="trailing" id="zsJ-Si-tJC"/>
                 </constraints>
@@ -187,6 +261,8 @@
                 </variation>
             </tableViewCellContentView>
             <connections>
+                <outlet property="detailView" destination="BWK-mm-eRT" id="xTr-hb-Mnp"/>
+                <outlet property="detailViewBottomLayout" destination="PEx-43-FUN" id="8TL-Rh-vSj"/>
                 <outlet property="gameCreator" destination="5jd-YX-Uyz" id="Hf9-ZZ-4rY"/>
                 <outlet property="gameDateLabel" destination="WzO-lh-Kmn" id="wts-KK-73P"/>
                 <outlet property="gameFriends" destination="YKM-yO-hKc" id="E48-u8-SPG"/>
@@ -197,8 +273,10 @@
                 <outlet property="gamePriceIcon" destination="U0d-1E-Xnv" id="xfA-IE-Ot8"/>
                 <outlet property="gameTime" destination="jrd-4f-Lsw" id="0Ey-9j-Du2"/>
                 <outlet property="gameTitle" destination="25b-eT-lad" id="Kee-CA-ows"/>
+                <outlet property="responseButton" destination="Ur1-GN-Z5q" id="f4w-Bc-D9O"/>
+                <outlet property="suggestInviteButton" destination="us0-6X-ELj" id="oQO-DY-ysg"/>
             </connections>
-            <point key="canvasLocation" x="139" y="183"/>
+            <point key="canvasLocation" x="139" y="197.5"/>
         </tableViewCell>
     </objects>
     <resources>
